# fps-commentator

./: .gitignore  LICENSE  README.md  pyproject.toml
fps-commentator/: .env.example  README.md  cli.py
fps-commentator/src/pipeline/: __init__.py  audio_mixer.py  commentary_writer.py  commentator.py  video_analyzer.py
src/pipeline/: tts_engine.py
src/utils/: config.py
tests/: test_commentary_writer.py
